# taylorissue

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: Cargo.toml  query  tauri.conf.json
src-tauri/.clawhub/: lock.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/automation-workflows/.clawhub/: origin.json
src-tauri/skills/ci-cd-pipeline/: _meta.json
src-tauri/skills/ci-cd-pipeline/.clawhub/: origin.json
src-tauri/skills/ci-cd-pipeline/scripts/: script.sh
src-tauri/skills/database-designer/.clawhub/: origin.json
src-tauri/skills/devops/.clawhub/: origin.json
src-tauri/skills/flexible-database-design/.clawhub/: origin.json
src-tauri/skills/web-pilot/: _meta.json
src-tauri/skills/web-pilot/.clawhub/: origin.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: install.rs  message.rs  mod.rs  repair.rs  skill.rs  uninstall.rs
src-tauri/src/kernel/: agent.rs  mod.rs
src-tauri/src/kernel/llm/: anthropic.rs  base.rs  mod.rs  openai.rs  response_format.rs  token_counter.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/services/: agent_registry.rs  clawhub_client.rs  conversation_store.rs  install_runner.rs  message_service.rs  mod.rs  openclaw_ref.rs  repair_runner.rs  setup_detection.rs  shell_env.rs  skill_store.rs  step_runner.rs  uninstall_runner.rs
src-tauri/tests/services/: common.rs  install_runner.rs  main.rs  repair_runner.rs  skill_store.rs  uninstall_runner.rs
(+180 files in other folders)
